refactor: migrate JSDoc types to TypeScript declarations and update fan device models